# xc-bela-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Toolchain.cmake
BelaExtras/: CustomMakefileBottom.in  CustomMakefileTop.in  SyncBelaSysRoot.sh
src/: CMakeLists.txt  render.cpp
